--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -31,3 +31,15 @@
 
 en:
   hello: "Hello world"
+  resource:
+    create:
+      success: "%{resource_name} was successfully created."
+    update:
+      success: "%{resource_name} was successfully updated."
+    destroy:
+      success: "%{resource_name} was successfully destroyed."
+  activerecord:
+    models:
+      project:
+        one: Bull
+        other: Bulls
